Fix stables on ios

--- a/ui/src/styles/darkmode.scss
+++ b/ui/src/styles/darkmode.scss
@@ -97,6 +97,10 @@ body.dark {
   .table {
     background-color: $background-color;
     color: $foreground-color;
+
+    th, td {
+      color: $foreground-color;
+    }
   }
 
   .box,
